--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: localhost
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
-
+  username: rails
 development:
   <<: *default
   database: blog_development
